--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div id="loader" class="loader">
+        <h1>0%</h1>
+    </div>
 
     <div class="container-fluid">
         <div id="bg-page" class="row bg-page">
