--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <nav class="navbar navbar-expand-lg my-nav">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="#">
-                            <h1 id="a-nav">Arslan Foods</h1>
+                            <h1 id="a-nav" class="a-nav1">Arslan Foods</h1>
                         </a>
                         <button id="a-nav" class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
@@ -30,11 +30,11 @@
                         </button>
                         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                             <div class="navbar-nav">
-                                <a id="a-nav" class="nav-link fs-4 a-nav" aria-current="page" href="#">Home</a>
-                                <a id="a-nav" class="nav-link fs-4 a-nav" href="#">Item</a>
-                                <a id="a-nav" class="nav-link fs-4 a-nav" href="#">Services</a>
-                                <a id="a-nav" class="nav-link fs-4 a-nav">About Us</a>
-                                <a id="a-nav" class="fs-4 a-nav"> <button class="p-btn">Get Promo</button></a>
+                                <a id="a-nav" class="nav-link a-nav" aria-current="page" href="#">Home</a>
+                                <a id="a-nav" class="nav-link a-nav" href="#">Item</a>
+                                <a id="a-nav" class="nav-link a-nav" href="#">Services</a>
+                                <a id="a-nav" class="nav-link a-nav">About Us</a>
+                                <a id="a-nav"> <button class="p-btn">Get Promo</button></a>
                             </div>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                         <button id="pp" class="p2-btn">Chiken Paratha</button>
                         <button id="pp" class="p2-btn">Anda paratha</button><br>
                         <button id="pp" class="p1-btn">Sada Paratha</button>
-                        <button id="pp" class="p2-btn">Cheese Paratha</button>
+                        <button id="pp" class="p3-btn">Cheese Paratha</button>
 
                     </div>
                     <div class="col-lg-6">
